# aktivt_systemejerskab

./: .env.example  .gitignore  .pylintrc  IT Systemer Overblik.xlsx  UDVIKLINGSPLAN.md  export_kitos_csv.py  fetch_mtm_systems.py  kitos_api.md  main.py  pyproject.toml  requirements.txt  run_sync.bat  setup_scheduler.ps1  sync_to_sharepoint.py  test_connection.py  test_kitos_explore.py
.github/workflows/: Linting.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
requirements/: base.txt  dev.txt  prod.txt
robot_framework/: config.py  process.py
src/: config.py  kitos_client.py  main.py  mapper.py  sharepoint_client.py
tests/: test_kitos_client.py  test_mapper.py  test_sharepoint_client.py
